--- a/client/index.html
+++ b/client/index.html
@@ -1,1 +1,4 @@
-hello world
+<form method="post" action="archive">
+	<input type="url" placeholder="http://example.com" name="url" value="http://nodejs.org" required />
+	<input type="submit" value="Archive" />
+</form>
