--- a/src/index.html
+++ b/src/index.html
@@ -1,7 +1,7 @@
 <template>
 	<require from="add-archive-form"></require>
-	<require from="archives"></require>
+	<require from="archives-list"></require>
 	
 	<add-archive-form></add-archive-form>
-	<archives></archives>
+	<archives-list></archives-list>
 </template>
