--- a/src/archives-list.html
+++ b/src/archives-list.html
@@ -1,9 +1,19 @@
 <template>
-	<div repeat.for="archive of archives">
-		<a route-href="route: archive; params.bind: {id: archive._id}">
-			${archive.url}
-		</a>
+	<div repeat.for="archive of archives" class="margin-vertical">
+		<h4>
+			<a route-href="route: archive; params.bind: {id: archive._id}">
+				${archive.url}
+			</a>
+		</h4>
+		<p show.bind="false">
+			Description goes here
+		</p>
 		
-		<button click.trigger="removeArchive(archive)">delete</button>
+		<div>
+			<button click.trigger="removeArchive(archive)" class="btn btn-danger btn-sm">
+				<span class="glyphicon glyphicon-trash" aria-hidden="true"></span>
+				delete
+			</button>
+		</div>
 	</div>
 </template>
