--- a/src/index.html
+++ b/src/index.html
@@ -2,6 +2,13 @@
 	<require from="add-archive-form"></require>
 	<require from="archives-list"></require>
 	
-	<add-archive-form></add-archive-form>
-	<archives-list></archives-list>
+	<div class="navbar navbar-form navbar-static-top">
+		<div class="container-fluid">
+			<add-archive-form></add-archive-form>
+		</div>
+	</div>
+	
+	<div class="container-fluid">
+		<archives-list></archives-list>
+	</div>
 </template>
